[package]
name = "safe_api"
version = "0.2.4"
edition = "2021"
description = "Simple Autonomi Network Client"
authors = ["loziniak"]
license = "GPL-3.0"
repository = "https://github.com/JAMSplayer/safe"
keywords = ["autonomi", "p2p", "DePin"]
categories = ["api-bindings", "cryptography", "data-structures", "security"]

[dependencies]
tokio = "*"
bytes = { version = "*", features = ["serde"] }
tracing = "*"
rand = "0.8.5"
xor_name = "*"
libp2p = { version="*", features = ["serde"] }
bls = { package = "blsttc", version = "*" }
alloy-primitives = "*"
rmp-serde = "*"

argon2 = "0.5"
password-hash = "0.5"
aes-gcm = "*"
serde_json = "1"
serde = "*"

ant-logging = "*"
autonomi = { version = "0.4.3", features = ["loud"] }
evmlib = "*"
ant-protocol = "*"

[profile.dev]
debug = 0
strip = "debuginfo"
incremental = true
