[package]
name = "safeapi"
version = "0.3.1"
edition = "2021"
description = "Simple Autonomi Network Client"
authors = ["loziniak"]
license = "GPL-3.0"
repository = "https://github.com/JAMSplayer/safe"
keywords = ["autonomi", "p2p", "DePin"]
categories = ["api-bindings", "cryptography", "data-structures", "security"]

[dependencies]
tokio = "1"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"
rand = "0.8.5"
xor_name = "5"
libp2p = { version="0.55", features = ["serde"] }
bls = { package = "blsttc", version = "8" }
alloy-primitives = "0.8"
rmp-serde = "1"

argon2 = "0.5"
password-hash = "0.5"
aes-gcm = "0.10"
serde_json = "1"
serde = "1"

ant-logging = "0.2"
autonomi = { version = "0.4.3", features = ["loud"] }
evmlib = "0.2"
ant-protocol = "1"

[profile.dev]
debug = 0
strip = "debuginfo"
incremental = true
